--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,11 @@ nav ul {
   gap: 10px;
 }
 
+nav, ul, li, a {
+  text-decoration: none;
+  color: #eaeaea;
+}
+
 li {
   list-style-type: none;
   padding: 10px;
